--- a/config.yml
+++ b/config.yml
@@ -25,8 +25,8 @@ params:
     # to enable google analytics, opengraph, twitter-cards and schema.
     
     title: prostheticHead.dev
-    description: "devlog"
-    keywords: [Blog, Portfolio, PaperMod]
+    description: "devlogs"
+    keywords: [Blog, GameDev, Devlog]
     author: Ash
     # author: ["Me", "You"] # multiple authors
     images: ["<link or path of image for opengraph, twitter-cards>"]
@@ -36,9 +36,9 @@ params:
 
     ShowReadingTime: false
     ShowShareButtons: true
-    ShowPostNavLinks: true
+    ShowPostNavLinks: false 
     ShowBreadCrumbs: true
-    ShowCodeCopyButtons: false
+    ShowCodeCopyButtons: true 
     disableSpecial1stPost: false
     disableScrollToTop: false
     comments: false
@@ -57,22 +57,24 @@ params:
         safari_pinned_tab: "<link / abs url>"
 
     label:
-        text: "Home"
-        icon: /apple-touch-icon.png
-        iconHeight: 35
+        text: "prostheticHead.dev"
+        #icon: /apple-touch-icon.png
+        #iconHeight: 35
 
     # profile-mode
     profileMode:
-        enabled: false # needs to be explicitly set
-        title: ExampleSite
-        subtitle: "This is subtitle"
-        imageUrl: "<img location>"
-        imageWidth: 120
-        imageHeight: 120
-        imageTitle: my image
+        enabled: true # needs to be explicitly set
+        title: prostheticHead.dev
+        subtitle: ""
+        #imageUrl: "<img location>"
+        #imageWidth: 120
+        #imageHeight: 120
+        #imageTitle: prostheticHead
         buttons:
             - name: Posts
               url: posts
+            - name: Archives
+              url: archives
             - name: Tags
               url: tags
 
@@ -126,15 +128,15 @@ menu:
         - identifier: categories
           name: categories
           url: /categories/
-          weight: 20
+          weight: 30
         - identifier: tags
           name: tags
           url: /tags/
-          weight: 30
-        - identifier: example
-          name: example.org
-          url: https://example.org
           weight: 40
+        - identifier: posts 
+          name: posts
+          url: /posts/
+          weight: 20
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
 # markup:
