--- a/config.yml
+++ b/config.yml
@@ -50,11 +50,11 @@ params:
     assets:
         # disableHLJS: true # to disable highlight.js
         # disableFingerprinting: true
-        favicon: "<link / abs url>"
-        favicon16x16: "<link / abs url>"
-        favicon32x32: "<link / abs url>"
-        apple_touch_icon: "<link / abs url>"
-        safari_pinned_tab: "<link / abs url>"
+        favicon: "images/logo-small.png"
+        favicon16x16: "images/logo-small.png"
+        favicon32x32: "images/logo-small.png"
+        apple_touch_icon: "images/logo-small.png"
+        safari_pinned_tab: "images/logo-small.png"
 
     label:
         text: "prostheticHead.dev"
