--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@ enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
+googleAnalytics: 209073536
 
 minify:
     disableXML: false
