--- a/config.yml
+++ b/config.yml
@@ -24,14 +24,14 @@ params:
     # to enable google analytics, opengraph, twitter-cards and schema.
     
     title: prostheticHead.dev
-    description: "my devlogs"
+    description: "my personal devlog"
     keywords: [Blog, GameDev, Devlog]
     author: Ash
     # author: ["Me", "You"] # multiple authors
     images: ["<link or path of image for opengraph, twitter-cards>"]
     DateFormat: "January 2, 2006"
     defaultTheme: dark # dark, light
-    disableThemeToggle: false
+    disableThemeToggle: true
 
     ShowReadingTime: false
     ShowShareButtons: true
@@ -89,6 +89,9 @@ params:
           url: "https://ph2k.itch.io"
         - name: github
           url: "https://github.com/prosthetichead"
+        - name: thingiverse
+          url: "https://www.thingiverse.com/prosthetichead/designs"
+
 
     cover:
         hidden: true # hide everywhere but not in structured data
