--- a/config.yml
+++ b/config.yml
@@ -72,6 +72,8 @@ params:
         buttons:
             - name: Posts
               url: posts
+            - name: 3D Prints
+              url: posts
             - name: Archives
               url: archives
             - name: Tags
