--- a/config.yml
+++ b/config.yml
@@ -65,17 +65,17 @@ params:
         enabled: true # needs to be explicitly set
         title: prostheticHead.dev
         subtitle: ""
-        #imageUrl: "<img location>"
+        imageUrl: "/images/logo-small.png"
         #imageWidth: 120
         #imageHeight: 120
         #imageTitle: prostheticHead
         buttons:
-            - name: Posts
+            - name: All Posts
               url: posts
-            - name: 3D Prints
-              url: prints
-            - name: Archives
-              url: archives
+            - name: 3D Printing
+              url: categories/3d-printing/
+            - name: Game Dev
+              url: categories/game-dev/
             - name: Tags
               url: tags
 
