--- a/config.yml
+++ b/config.yml
@@ -62,7 +62,7 @@ params:
 
     # profile-mode
     profileMode:
-        enabled: false # needs to be explicitly set
+        enabled: true # needs to be explicitly set
         title: prostheticHead.dev
         subtitle: ""
        # imageUrl: "/images/keen.png"
@@ -96,9 +96,9 @@ params:
 
 
     cover:
-        hidden: true # hide everywhere but not in structured data
-        hiddenInList: true # hide on list pages and home
-        hiddenInSingle: true # hide on single page
+        hidden: false # hide everywhere but not in structured data
+        hiddenInList: false # hide on list pages and home
+        hiddenInSingle: false # hide on single page
 
     editPost:
         URL: "https://github.com/prosthetichead/phDotDev/tree/main/content"
