--- a/config.yml
+++ b/config.yml
@@ -98,7 +98,7 @@ params:
     cover:
         hidden: false # hide everywhere but not in structured data
         hiddenInList: false # hide on list pages and home
-        hiddenInSingle: false # hide on single page
+        hiddenInSingle: true # hide on single page
 
     editPost:
         URL: "https://github.com/prosthetichead/phDotDev/tree/main/content"
