--- a/config.yml
+++ b/config.yml
@@ -62,7 +62,7 @@ params:
 
     # profile-mode
     profileMode:
-        enabled: false # needs to be explicitly set
+        enabled: true # needs to be explicitly set
         title: prostheticHead.dev
         subtitle: ""
        # imageUrl: "/images/keen.png"
@@ -72,10 +72,10 @@ params:
         buttons:
             - name: Posts
               url: posts
-            - name: Game Dev
-              url: categories/game-dev/
-            - name: 3D Printing
-              url: categories/3d-printing/
+            #- name: Game Dev
+            #  url: categories/game-dev/
+            #- name: 3D Printing
+            #  url: categories/3d-printing/
             - name: Tags
               url: tags
 
